--- a/server/view.ejs
+++ b/server/view.ejs
@@ -9,16 +9,38 @@
     <script type="text/javascript" async="async" defer="defer" src="application.js"></script>
   </head>
   <body>
-    <h1>List Page</h1>
-    <main>
-      <div class="row">
-        <div class="col-md-2">Is Done?</div>
-        <div class="col-md-10">Project</div>
+    <!-- Imports -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+
+    <!-- Application -->
+    <div class="todo-container">
+      <header>Tory's ToDo List</header>
+      <div class="add-todo-container">
+        <div class="enter-todo">
+          <input type="text" class="form-control" placeholder="New ToDo">
+        </div>
+        <button class="btn">Add</button>
       </div>
-      <div class="row">
-        <div class="col-md-2">No</div>
-        <div class="col-md-10">Learn JavaScript</div>
-      </div>
-    </main>
+      <ul class="list-group"></ul>
+      <footer></footer>
+    </div>
+
+    <!-- Templates -->
+
+    <script type="text/x-template">
+      <li class="list-group-item {{#if completed}}disabled{{/if}}">
+        <div class="col-md-1"><input type="checkbox" {{#if completed}}checked{{/if}}></div>
+        <div class="col-md-10"><p class="item-title">{{title}}</p></div>
+        <div class="col-md-1"><button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+      </li>
+    </script>
   </body>
 </html>
