--- a/client/styles/todo.scss
+++ b/client/styles/todo.scss
@@ -7,7 +7,7 @@
   border-radius: 5px;
   font-family: georgia;
 }
-header {
+.todo-header {
   width: 456px;
   height: 26px;
   background: #999999;
@@ -46,6 +46,6 @@ header {
   height: 46px;
   margin: 0 5px;
 }
-footer {
+.todo-footer {
   height: 1px;
 }
