--- a/server/view.ejs
+++ b/server/view.ejs
@@ -9,11 +9,10 @@
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
   <body>
-    <nav>
-      <button><a role="menuitem" href="/pages/todo.html">ToDo Application</a></button>
-      <button><a role="menuitem" href="/pages/project.html">My Project</a></button>
-      <button><a role="menuitem" href="/pages/funnySquares.html">Funny Squares</a></button>
-    </nav>
+    
+    <header class="main-header"></header>
+    <main></main>
+    <footer></footer>
 
   </body>
 </html>
