--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -2,4 +2,5 @@
   <button><a role="menuitem" href="/pages/todo.html">ToDo Application</a></button>
   <button><a role="menuitem" href="/pages/dyba.html">DYBA</a></button>
   <button><a role="menuitem" href="/pages/funnySquares.html">Funny Squares</a></button>
+  <button><a role="menuitem" href="/pages/forms-backbone.html">Backbone Forms</a></button>
 </nav>
