--- a/client/templates/dyba-main.html
+++ b/client/templates/dyba-main.html
@@ -1,15 +1,27 @@
 <div class="dyba-main-container row">
-  <div class="dyba-links-sidebar col-md-3 col-sm-12">
+  <div class="dyba-links-sidebar col-md-3 col-sm-3">
     <a class="dyba-sidelink" role="link" href="http://www.cnn.com">
-      <div class="content"></div>
+      <div class="dyba-sidebar-logo-3">Register</div>
+      <img src="/images/Jags Logo Green.png" class="dyba-sidebar-logo-2">
+      <div class="dyba-sidebar-logo-1">J</div>
     </a>
     <a class="dyba-sidelink" role="link" href="#">
-      <img src="/images/Jags Logo Green.png" class="dyba-sidebar-logo">
-      <p>REGISTER<br>FOR DYBA</p>
+      <div class="dyba-sidebar-logo-3">Growth</div>
+      <img src="/images/Jags Logo Green.png" class="dyba-sidebar-logo-2">
+      <div class="dyba-sidebar-logo-1">A</div>
     </a>
-    <a class="dyba-sidelink" role="link" href="#">Link 3</a>
+    <a class="dyba-sidelink" role="link" href="#">
+      <div class="dyba-sidebar-logo-3">Teams</div>
+      <img src="/images/Jags Logo Green.png" class="dyba-sidebar-logo-2">
+      <div class="dyba-sidebar-logo-1">G</div>
+    </a>
+    <a class="dyba-sidelink" role="link" href="#">
+      <div class="dyba-sidebar-logo-3">Programs</div>
+      <img src="/images/Jags Logo Green.png" class="dyba-sidebar-logo-2">
+      <div class="dyba-sidebar-logo-1">S</div>
+    </a>
   </div>
-  <div class="dyba-main-content col-md-9 col-sm-12"></div>
+  <div class="dyba-main-content col-md-9 col-sm-9"></div>
 </div>
 
 
