--- a/client/templates/dyba-navbar.html
+++ b/client/templates/dyba-navbar.html
@@ -4,17 +4,18 @@
     <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-large">
   </a>
   <ul class="dyba-links-container col-md-9 col-sm-12">
+    <li class="row buffer-row hidden-xs hidden-sm"></li>
     <li class="row hidden-xs hidden-sm"></li>
     <li class="row">
       <ul class="dyba-nav-menu">
-        <li class="dyba-nav-menuitem">
+        <li class="dyba-nav-link-container">
           <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">Registration</a>
         </li>
         <li class="dyba-nav-item">
           <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
         </li>
-        <li class="dyba-nav-menuitem">
-          <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">Teams</a>
+        <li class="dyba-nav-header-container">
+          <div class="dyba-nav-header">Teams</div>
           <ul class="dyba-nav-submenu">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -24,8 +25,8 @@
         <li class="dyba-nav-item">
           <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
         </li>
-        <li class="dyba-nav-menuitem">
-          <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">Programs</a>
+        <li class="dyba-nav-header-container">
+          <div class="dyba-nav-header">Programs</div>
           <ul class="dyba-nav-submenu">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -35,8 +36,8 @@
         <li class="dyba-nav-item">
           <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
         </li>
-        <li class="dyba-nav-menuitem">
-          <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">About</a>
+        <li class="dyba-nav-header-container">
+          <div class="dyba-nav-header">About</div>
           <ul class="dyba-nav-submenu">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -46,8 +47,8 @@
         <li class="dyba-nav-item">
           <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
         </li>
-        <li class="dyba-nav-menuitem">
-          <a class="dyba-nav-link" role="menuitem" href="/pages/funnySquares.html">Coaches</a>
+        <li class="dyba-nav-header-container">
+          <div class="dyba-nav-header">Coaches</div>
           <ul class="dyba-nav-submenu dyba-nav-submenu-last">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -56,6 +57,7 @@
         </li>
       </ul>
     </li>
+    <li class="row buffer-row hidden-xs"></li>
   </ul>
 </nav>
 
