created splash page

--- a/server/view.ejs
+++ b/server/view.ejs
@@ -6,13 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
   <body>
-    
-    <header class="main-header"></header>
-    <main></main>
-    <footer></footer>
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="main-container col-sm-8 col-sm-push-4">
+          Tory Rahm<br>Front-end Developer
+        </div>
+        <div class="sidebar-container col-sm-4 col-sm-pull-8">
+          <div class="profile-container">
+            <h1>Profile</h1>
+            <p>I am a mechanical engineer learning front-end development. I have experience with HTML5, CSS3, JavaScript, jQuery, Backbone, Underscore, Bootstrap and Handlebars. I am new to front-end development. However, I have the intelligence, inherent skills, business experience and work ethic to be successful in this industry. I have a passion for learning and I am a relentless problem-solver. Check out my work at the links below. Please contact me at 303-589-5626 or toryrahm@gmail.com if you have an opening for a junior developer. Thanks!</p>
+          </div>
+          <a class="social-container" href="https://www.linkedin.com/in/toryrahm">
+            <img class="social-icon" src="/images/LinkedIn.png">
+          </a>
+          <div class="my-work-container">
+            <h1>My Work</h1>
+            <div class="button-container">
+              <a class="btn btn-primary btn-block" href="/pages/dyba.html">
+                <span>DYBA</span>
+              </a>
+              <a class="btn btn-primary btn-block" href="/pages/todo.html">
+                <span>Todo Application</span>
+              </a>
+              <a class="btn btn-primary btn-block" href="#">
+                <span>Music Animation</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
