todo-backbone changes

--- a/client/templates/dyba-navbar.html
+++ b/client/templates/dyba-navbar.html
@@ -11,8 +11,10 @@
         <li class="dyba-nav-link-container">
           <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">Registration</a>
         </li>
-        <li class="dyba-nav-item">
-          <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
+        <li class="dyba-nav-item roar">
+          <a href="#">
+            <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
+          </a>
         </li>
         <li class="dyba-nav-header-container">
           <div class="dyba-nav-header">Teams</div>
