--- a/client/styles/home-page.scss
+++ b/client/styles/home-page.scss
@@ -1,13 +1,14 @@
 @font-face {
-    font-family: good-dog;
-    src: url(/css/GoodDog-webfont.ttf);
+    font-family: immortal;
+    src: url(/css/immortal.ttf);
 }
-.row {
-  height: 700px;
+.tory-container {
+  background: #ff6500;
+  min-height: 650px;
 }
 .sidebar-container {
-  height: 100%;
-  padding-bottom: 20px;
+  height: auto;
+  padding-bottom: 30px;
   background-image:
     linear-gradient(
       to right,
@@ -19,14 +20,14 @@
 .profile-container {
   height: auto;
   text-align: center;
-  font-family: good-dog;
+  font-family: immortal;
   color: #fe934c;
   width: 90%;
 }
 .profile-container p {
-  font-family: georgia;
-  font-size: 15px;
-  line-height: 17px;
+  font-family: immortal;
+  font-size: 16px;
+  line-height: 18px;
   text-align: left;
 }
 .social-container {
@@ -34,6 +35,7 @@
   height: auto;
   width: 90%;
   text-align: center;
+  padding-top:10px;
 }
 .social-icon {
   height: 20px;
@@ -42,7 +44,7 @@
 .my-work-container {
   height: auto;
   text-align: center;
-  font-family: good-dog;
+  font-family: immortal;
   font-size: 30px;
   line-height: 30px;
   color: #fe934c;
@@ -58,13 +60,13 @@
   font-size: 20px;
 }
 .main-container {
-  height: 100%;
+  height: auto;
   background: #ff6500;
   padding-top: 100px;
   text-align: center;
-  font-family: good-dog;
-  font-size: 70px;
-  line-height: 90px;
+  font-family: immortal;
+  font-size: 55px;
+  line-height: 70px;
   color: white;
 }
 @media (max-width: 767px) {
@@ -72,20 +74,38 @@
     height: auto;
     padding-bottom: 20px;
     background: #b24700;
-    margin-top: -20px;
+    margin-top: 0;
   }
   .profile-container {
     width: 100%;
   }
+  .profile-heading {
+    margin-top: 0;
+    padding-top: 10px;
+  }
   .social-container {
     width: 100%;
+    padding-top:10px;
   }
   .my-work-container {
     width: 100%;
   }
+  .button-container {
+  width: 60%;
+}
   .main-container {
     height: auto;
     padding-top: 25px;
     padding-bottom: 25px;
+  }
+}
+@media (min-width: 767px) and (max-width: 865px) {
+  .button-container span {
+    font-size: 18px;
+  }
+}
+@media (min-height: 651px) {
+  .tory-container {
+    height: 100vh;
   }
 }
