--- a/client/templates/todoItem.html
+++ b/client/templates/todoItem.html
@@ -1,5 +1,5 @@
 <div class="col-md-1">
-  <input type="checkbox">
+  <input class="completed-checkbox" type="checkbox" {{#if completed}}checked{{/if}}>
 </div>
 <div class="col-md-10 title">
   <p class="item-title">{{title}}</p>
