--- a/server/view.ejs
+++ b/server/view.ejs
@@ -24,18 +24,21 @@
             <a class="social-link" href="https://www.linkedin.com/in/toryrahm">
               <img class="social-icon" src="/images/LinkedIn.png">
             </a>
+            <a class="social-link" href="https://github.com/tsrahm">
+              <img class="social-icon" src="/images/GitHub-Light.png">
+            </a>
           </div>
           <div class="my-work-container">
             <h2>My Work</h2>
             <div class="button-container">
               <a class="btn btn-primary btn-block" href="/pages/dyba.html">
-                <span>DYBA</span>
+                <span class="my-work-button-text">DYBA</span>
               </a>
               <a class="btn btn-primary btn-block" href="/pages/todo.html">
-                <span>Todo Application</span>
+                <span class="my-work-button-text">Todo Application</span>
               </a>
               <a class="btn btn-primary btn-block" href="#">
-                <span>Music Animation</span>
+                <span class="music-animation">Animation (Coming)</span>
               </a>
             </div>
           </div>
