--- a/public/main.css
+++ b/public/main.css
@@ -410,9 +410,13 @@ h1 {
   padding-top: 7px;
 }
 
-.button-container span {
+.my-work-button-text {
   font-family: georgia;
   font-size: 20px;
+}
+
+.music-animation {
+  font-size: 16px;
 }
 
 .main-container {
@@ -458,8 +462,11 @@ h1 {
 }
 
 @media (min-width: 767px) and (max-width: 865px) {
-  .button-container span {
+  .my-work-button-text {
     font-size: 18px;
+  }
+  .music-animation {
+    font-size: 14px;
   }
 }
 
