--- a/server/view.ejs
+++ b/server/view.ejs
@@ -13,7 +13,7 @@
     <div class="container-fluid">
       <div class="row tory-container">
         <div class="main-container col-sm-8 col-sm-push-4">
-          Tory Rahm<br>Front-end Developer
+          Tory Rahm<br><span class="fr-ed">Front-end Developer</span>
         </div>
         <div class="sidebar-container col-sm-4 col-sm-pull-8">
           <div class="profile-container">
