--- a/public/main.css
+++ b/public/main.css
@@ -430,6 +430,10 @@ h1 {
   color: white;
 }
 
+.fr-ed {
+  font-size: 45px;
+}
+
 @media (max-width: 767px) {
   .sidebar-container {
     height: auto;
@@ -458,6 +462,12 @@ h1 {
     height: auto;
     padding-top: 25px;
     padding-bottom: 25px;
+  }
+}
+
+@media (max-width: 500px) {
+  .fr-ed {
+    font-size: 35px;
   }
 }
 
