changed todo-item filename

--- a/client/templates/todo-item.html
+++ b/client/templates/todo-item.html
@@ -6,7 +6,7 @@
 </div>
 <div class="col-md-10 title-edit hidden">
   <p class="item-title">
-    <input type="text" class="form-control" value="{{title}}" data-id="{{id}}">
+    <input type="text" class="form-control title-edit-input" value="{{title}}">
   </p>
 </div>
 <div class="col-md-1">
