added music animation

--- a/server/view.ejs
+++ b/server/view.ejs
@@ -37,8 +37,8 @@
               <a class="btn btn-primary btn-block" href="/pages/todo.html">
                 <span class="my-work-button-text">Todo Application</span>
               </a>
-              <a class="btn btn-primary btn-block" href="#">
-                <span class="music-animation">Animation (Coming)</span>
+              <a class="btn btn-primary btn-block" href="/pages/music.html">
+                <span class="my-work-button-text">Music Animation</span>
               </a>
             </div>
           </div>
