--- a/public/main.css
+++ b/public/main.css
@@ -415,10 +415,6 @@ h1 {
   font-size: 20px;
 }
 
-.music-animation {
-  font-size: 16px;
-}
-
 .main-container {
   height: auto;
   background: #ff6500;
@@ -484,6 +480,123 @@ h1 {
   .tory-container {
     height: 100vh;
   }
+}
+
+@font-face {
+  font-family: immortal;
+  src: url(/css/immortal.ttf);
+}
+
+.music-body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  background-color: black;
+  position: absolute;
+}
+
+.music-container {
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+  z-index: -1;
+  position: absolute;
+}
+
+.start-animation {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  line-height: 100px;
+  font-family: immortal;
+  font-size: 24px;
+  color: white;
+  background-color: #07530d;
+  border-radius: 50%;
+  border: white 3px solid;
+  display: none;
+}
+
+.beat-text {
+  color: orange;
+}
+
+.boop {
+  position: absolute;
+  width: auto;
+  left: 800px;
+  top: 150px;
+  font-size: 0px;
+  transform-origin: center center;
+}
+
+.flik1 {
+  position: absolute;
+  left: 850px;
+  top: 100px;
+  font-size: 0px;
+}
+
+.flik2 {
+  position: absolute;
+  left: 900px;
+  top: 70px;
+  font-size: 0px;
+}
+
+.flik3 {
+  position: absolute;
+  left: 950px;
+  top: 100px;
+  font-size: 0px;
+}
+
+.ting {
+  position: absolute;
+  left: 1000px;
+  top: 50px;
+  font-size: 0px;
+}
+
+.snare {
+  position: absolute;
+  left: 50px;
+  top: 250px;
+  font-size: 0px;
+}
+
+.off-bass {
+  position: absolute;
+  left: 150px;
+  top: 350px;
+  color: red;
+  font-size: 0px;
+}
+
+.bass {
+  position: absolute;
+  left: 50px;
+  top: 400px;
+  font-size: 0px;
+}
+
+.note {
+  position: absolute;
+  width: 50px;
+  opacity: 0;
+}
+
+.lyric-a, .lyric-b, .lyric-c, .lyric-d, .lyric-e, .lyric-f, .lyric-g, .lyric-h {
+  position: absolute;
+  display: none;
+  font-family: immortal;
+  font-size: 42px;
+  color: white;
+  text-shadow: 2px 2px 4px black;
 }
 
 /*# sourceMappingURL=main.css.map*/
