--- a/client/templates/dyba-main.html
+++ b/client/templates/dyba-main.html
@@ -1,5 +1,5 @@
 <div class="dyba-main-container row">
-  <div class="dyba-links-sidebar col-md-3 col-sm-3">
+  <div class="dyba-links-sidebar col-md-3 col-xs-3">
     <a class="dyba-sidelink" role="link" href="http://www.cnn.com">
       <div class="dyba-sidebar-logo-3">Register</div>
       <img src="/images/Jags Logo Green.png" class="dyba-sidebar-logo-2">
@@ -21,7 +21,7 @@
       <div class="dyba-sidebar-logo-1">S</div>
     </a>
   </div>
-  <div class="dyba-main-content col-md-9 col-sm-9"></div>
+  <div class="dyba-main-content col-md-9 col-xs-9"></div>
 </div>
 
 
