--- a/client/templates/todo-item.html
+++ b/client/templates/todo-item.html
@@ -1,19 +1,19 @@
-<div class="col-md-1">
+<div class="col-xs-1">
   {{#if completed}}
     <input class="completed-checkbox" type="checkbox" checked>
   {{else}}
     <input class="completed-checkbox" type="checkbox">
   {{/if}}
 </div>
-<div class="col-md-10 title">
+<div class="col-xs-10 title">
   <p class="item-title">{{title}}</p>
 </div>
-<div class="col-md-10 title-edit hidden">
+<div class="col-xs-10 title-edit hidden">
   <p class="item-title">
     <input type="text" class="form-control title-edit-input" value="{{title}}">
   </p>
 </div>
-<div class="col-md-1">
+<div class="col-xs-1">
   <button type="button" class="close" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
