adding photo search

--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -3,4 +3,5 @@
   <button><a role="menuitem" href="/pages/dyba.html">DYBA</a></button>
   <button><a role="menuitem" href="/pages/funnySquares.html">Funny Squares</a></button>
   <button><a role="menuitem" href="/pages/forms-backbone.html">Backbone Forms</a></button>
+  <button><a role="menuitem" href="/pages/photo-search.html">Photo Search</a></button>
 </nav>
