--- a/client/styles/dyba.scss
+++ b/client/styles/dyba.scss
@@ -193,7 +193,7 @@ ul {
   width: 100%;
   color: #005214;
   text-align: center;
-  font-size: 80px;
+  font-size: 6vw;
   font-family: garamond;
   font-weight: bold;
 }
@@ -217,7 +217,7 @@ ul {
   width: 100%;
   color: #005214;
   text-align: center;
-  font-size: 28px;
+  font-size: 2vw;
   font-family: garamond;
   font-weight: bold;
   padding-top: 35%;
