--- a/public/main.css
+++ b/public/main.css
@@ -61,9 +61,11 @@
   margin: 0;
   display: block;
   position: relative;
+  background-image: url("/images/Jags Logo Green.png");
+  background-size: 200px;
 }
 
-.dyba-body::after {
+/*.dyba-body::after {
   content: "";
   background-image: url("/images/Jags Logo Green.png");
   background-size: 200px;
@@ -74,14 +76,13 @@
   left: 0;
   position: absolute;
   z-index: -1;
-}
-
+}*/
 .dyba-container {
   position: relative;
-  width: 80%;
+  width: 100%;
   height: 800px;
   margin: 0 auto;
-  background: #d0d1d0;
+  background-color: rgba(208, 209, 208, 0.97);
   border-right: 3px solid #005214;
   border-left: 3px solid #005214;
 }
