--- a/client/styles/dyba copy.scss
+++ b/client/styles/dyba copy.scss
@@ -3,8 +3,7 @@
   display: block;
   position: relative;
   width: 100%;
-  background-image: url("/images/Jags Logo Green.png");
-  background-size: 200px;
+  background: #005214;
 }
 /*.dyba-body::after {
   content: "";
@@ -19,25 +18,21 @@
   z-index: -1;
 }*/
 .dyba-background {
-  margin: 0;
+  margin: 0 auto;
   display: block;
   position: relative;
-  width: 100%;
-  background-image:
-    linear-gradient(
-      to right,
-      rgba(0, 82, 20, 0.90),
-      rgba(0, 82, 20, 1) 20%,
-      rgba(0, 82, 20, 1) 80%,
-      rgba(0, 82, 20, 0.90)
-    );
+  background-image: url("/images/Jags Logo Green.png");
+  background-size: 200px;
+  max-width: 1000px;
 }
 .dyba-container {
   position: relative;
-  width: 80%;
-  max-width: 1000px;
-  height: 100%;
+  width: 100%;
+  height: 800px;
   margin: 0 auto;
+  background-color: rgba(208, 209, 208, 0.97);
+  border-right: 3px solid #005214;
+  border-left: 3px solid #005214;
 }
 .dyba-header {
   position: relative;
@@ -62,7 +57,7 @@
   margin: 0;
   line-height: 135px;
   font-size: 28px;
-  color: white;
+  color: #005214;
   text-align: center;
   opacity: 0;
 }
@@ -77,32 +72,19 @@
   text-align: center;
 }
 .dyba-links-container .row {
-  height: 40px;
-  line-height: 40px;
+  height: 55px;
+  line-height: 55px;
 }
 .dyba-links-container .buffer-row {
-  height: 85px;
+  height: 70px;
 }
 .dyba-links-container .xs-row {
   height: auto;
   line-height: 100%;
 }
-.dyba-jaguars {
-  position: relative;
-  text-decoration: none;
-  display: block;
-  color: white;
-  text-align: left;
-  font-size: 50px;
-  line-height: 85px;
-  font-weight: bold;
-  font-family: garamond;
-}
-.dyba-jaguars-sm {
-  text-align: center;
-}
 .dyba-nav-menu {
   padding: 0;
+  background: #999;
   width: 95%;
   max-width: 650px;
   margin: auto;
@@ -132,32 +114,35 @@
   position: relative;
   text-decoration: none;
   display: block;
-  color: white;
+  color: #005214;
   text-align: center;
   font-size: 20px;
+  font-weight: bold;
   font-family: garamond;
 }
 .dyba-nav-header {
   position: relative;
   text-decoration: none;
   display: block;
-  color: white;
+  color: #005214;
   text-align: center;
   font-size: 20px;
+  font-weight: bold;
   font-family: garamond;
 }
 .dyba-nav-submenu {
   position: absolute;
-  width: 200px;
+  width: 130px;
   height: auto;
   padding: 10px;
   background: #005214;
+  border-bottom: 2px solid black;
   z-index: 1;
   display: none;
 }
-@media (min-width: 1050px) and (max-width: 1280px) {
+@media (min-width: 1050px) and (max-width: 1180px) {
   .dyba-nav-submenu-last {
-    margin-left: -135px;
+    margin-left: -59px;
   }
 }
 .dyba-nav-submenu li {
@@ -182,11 +167,9 @@
   margin: 0;
 }
 .dyba-main {
-  height: 700px;
   position: relative;
   display: block;
   border-top: 1px dotted #005214;
-  background-color: rgb(208, 209, 208);
 }
 ul {
   list-style-type: none;
