--- a/client/templates/dyba-navbar copy.html
+++ b/client/templates/dyba-navbar copy.html
@@ -1,20 +1,22 @@
 <nav class="dyba-nav row">
-  <a href="#" class="dyba-logo-container col-md-3 col-sm-12 col-xs-12">
+  <a href="#" class="dyba-logo-container col-xs-12 col-md-3">
     <p class="home-hidden">Home</p>
     <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-large">
   </a>
-  <ul class="dyba-links-container col-md-9 col-sm-12">
-    <li class="row hidden-xs hidden-sm"></li>
-    <li class="row">
+  <ul class="dyba-links-container col-xs-12 col-md-9">
+    <li class="row buffer-row hidden-xs hidden-sm"></li>
+    <li class="row hidden-xs">
       <ul class="dyba-nav-menu">
-        <li class="dyba-nav-menuitem">
+        <li class="dyba-nav-link-container">
           <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">Registration</a>
         </li>
-        <li class="dyba-nav-item">
-          <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
+        <li class="dyba-nav-item roar">
+          <a href="#">
+            <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
+          </a>
         </li>
-        <li class="dyba-nav-menuitem">
-          <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">Teams</a>
+        <li class="dyba-nav-header-container">
+          <div class="dyba-nav-header">Teams</div>
           <ul class="dyba-nav-submenu">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -24,8 +26,8 @@
         <li class="dyba-nav-item">
           <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
         </li>
-        <li class="dyba-nav-menuitem">
-          <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">Programs</a>
+        <li class="dyba-nav-header-container">
+          <div class="dyba-nav-header">Programs</div>
           <ul class="dyba-nav-submenu">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -35,8 +37,8 @@
         <li class="dyba-nav-item">
           <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
         </li>
-        <li class="dyba-nav-menuitem">
-          <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">About</a>
+        <li class="dyba-nav-header-container">
+          <div class="dyba-nav-header">About</div>
           <ul class="dyba-nav-submenu">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -46,8 +48,8 @@
         <li class="dyba-nav-item">
           <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
         </li>
-        <li class="dyba-nav-menuitem">
-          <a class="dyba-nav-link" role="menuitem" href="/pages/funnySquares.html">Coaches</a>
+        <li class="dyba-nav-header-container">
+          <div class="dyba-nav-header">Coaches</div>
           <ul class="dyba-nav-submenu dyba-nav-submenu-last">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -56,7 +58,21 @@
         </li>
       </ul>
     </li>
-    <li class="row hidden-xs hidden-sm"></li>
+    <li class="row xs-row hidden-sm hidden-md hidden-lg">
+      <div class="dropdown dyba-xs-nav-dropdown">
+        <button class="btn btn-default dropdown-toggle dyba-xs-nav-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          Menu
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </div>
+    </li>
   </ul>
 </nav>
 
