--- a/public/main.css
+++ b/public/main.css
@@ -62,7 +62,8 @@
   display: block;
   position: relative;
   width: 100%;
-  background: #005214;
+  background-image: url("/images/Jags Logo Green.png");
+  background-size: 200px;
 }
 
 /*.dyba-body::after {
@@ -78,22 +79,19 @@
   z-index: -1;
 }*/
 .dyba-background {
-  margin: 0 auto;
+  margin: 0;
   display: block;
   position: relative;
-  background-image: url("/images/Jags Logo Green.png");
-  background-size: 200px;
-  max-width: 1100px;
+  width: 100%;
+  background-image: linear-gradient(to right, rgba(0, 82, 20, 0.9), #005214 20%, #005214 80%, rgba(0, 82, 20, 0.9));
 }
 
 .dyba-container {
   position: relative;
-  width: 100%;
-  height: 800px;
+  width: 80%;
+  max-width: 1000px;
+  height: 100%;
   margin: 0 auto;
-  background-color: rgba(208, 209, 208, 0.97);
-  border-right: 3px solid #005214;
-  border-left: 3px solid #005214;
 }
 
 .dyba-header {
@@ -122,7 +120,7 @@
   margin: 0;
   line-height: 135px;
   font-size: 28px;
-  color: #005214;
+  color: white;
   text-align: center;
   opacity: 0;
 }
@@ -140,12 +138,12 @@
 }
 
 .dyba-links-container .row {
-  height: 55px;
-  line-height: 55px;
+  height: 40px;
+  line-height: 40px;
 }
 
 .dyba-links-container .buffer-row {
-  height: 70px;
+  height: 85px;
 }
 
 .dyba-links-container .xs-row {
@@ -153,9 +151,24 @@
   line-height: 100%;
 }
 
+.dyba-jaguars {
+  position: relative;
+  text-decoration: none;
+  display: block;
+  color: white;
+  text-align: left;
+  font-size: 50px;
+  line-height: 85px;
+  font-weight: bold;
+  font-family: garamond;
+}
+
+.dyba-jaguars-sm {
+  text-align: center;
+}
+
 .dyba-nav-menu {
   padding: 0;
-  background: #999;
   width: 95%;
   max-width: 650px;
   margin: auto;
@@ -190,10 +203,9 @@
   position: relative;
   text-decoration: none;
   display: block;
-  color: #005214;
+  color: white;
   text-align: center;
   font-size: 20px;
-  font-weight: bold;
   font-family: garamond;
 }
 
@@ -201,27 +213,25 @@
   position: relative;
   text-decoration: none;
   display: block;
-  color: #005214;
+  color: white;
   text-align: center;
   font-size: 20px;
-  font-weight: bold;
   font-family: garamond;
 }
 
 .dyba-nav-submenu {
   position: absolute;
-  width: 130px;
+  width: 200px;
   height: auto;
   padding: 10px;
   background: #005214;
-  border-bottom: 2px solid black;
   z-index: 1;
   display: none;
 }
 
-@media (min-width: 1050px) and (max-width: 1180px) {
+@media (min-width: 1050px) and (max-width: 1280px) {
   .dyba-nav-submenu-last {
-    margin-left: -59px;
+    margin-left: -135px;
   }
 }
 
@@ -251,9 +261,11 @@
 }
 
 .dyba-main {
+  height: 700px;
   position: relative;
   display: block;
   border-top: 1px dotted #005214;
+  background-color: #d0d1d0;
 }
 
 ul {
