updated dyba mobile view

--- a/client/styles/dyba.scss
+++ b/client/styles/dyba.scss
@@ -34,14 +34,15 @@
 }
 .dyba-container {
   position: relative;
-  width: 80%;
-  max-width: 1000px;
-  height: 100%;
+  width: 100%;
+  height: auto;
   margin: 0 auto;
 }
 .dyba-header {
   position: relative;
   display: block;
+  width: 80%;
+  margin: 0 auto;
 }
 .dyba-nav {
   position: relative;
@@ -51,7 +52,8 @@
 .dyba-logo-container {
   position: relative;
   display: inline-block;
-  height: 135px;
+  padding-top: 5px;
+  height: 100%;
   text-align: center;
 }
 .home-hidden {
@@ -66,10 +68,10 @@
   text-align: center;
   opacity: 0;
 }
-.dyba-nav-logo-large {
+.dyba-nav-logo {
   position: relative;
   display: inline-block;
-  height: 150px;
+  height: 135px;
 }
 .dyba-links-container {
   position: relative;
@@ -93,12 +95,20 @@
   display: block;
   color: white;
   text-align: left;
-  font-size: 50px;
+  font-size: 35px;
   line-height: 85px;
   font-weight: bold;
   font-family: garamond;
 }
 .dyba-jaguars-sm {
+  position: relative;
+  display: inline-block;
+  padding: 0 10px;
+  color: white;
+  font-size: 25px;
+  line-height: 85px;
+  font-weight: bold;
+  font-family: garamond;
   text-align: center;
 }
 .dyba-nav-menu {
@@ -155,10 +165,8 @@
   z-index: 1;
   display: none;
 }
-@media (min-width: 1050px) and (max-width: 1280px) {
-  .dyba-nav-submenu-last {
+.dyba-nav-submenu-last {
     margin-left: -135px;
-  }
 }
 .dyba-nav-submenu li {
   line-height: 30px;
@@ -182,9 +190,11 @@
   margin: 0;
 }
 .dyba-main {
-  height: 700px;
   position: relative;
   display: block;
+  width: 80%;
+  height: 700px;
+  margin: 0 auto;
   border-top: 1px dotted #005214;
   background-color: rgb(208, 209, 208);
 }
@@ -250,6 +260,13 @@ ul {
   font-weight: bold;
   padding-top: 35%;
 }
-
-
-
+@media (max-width: 1050px) {
+  .dyba-nav-logo {
+    height: 100px;
+  }
+}
+@media (max-width: 799px) {
+  .dyba-main {
+    width: 100%;
+  }
+}
