--- a/client/templates/dyba-navbar.html
+++ b/client/templates/dyba-navbar.html
@@ -1,12 +1,15 @@
 <nav class="dyba-nav row">
-  <a href="#" class="dyba-logo-container hidden-sm col-xs-12 col-md-3">
+  <a href="#" class="dyba-logo-container col-xs-12 hidden-sm col-md-3">
     <p class="home-hidden">Home</p>
-    <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-large">
+    <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo">
   </a>
-  <span class="dyba-jaguars dyba-jaguars-sm hidden-xs hidden-md hidden-lg">D'EVELYN JAGUARS</span>
+  <div class="dyba-logo-container hidden-xs col-sm-12 hidden-md hidden-lg">
+    <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo">
+    <span class="dyba-jaguars dyba-jaguars-sm">D'EVELYN YOUTH BASKETBALL</span>
+  </div>
   <ul class="dyba-links-container col-xs-12 col-md-9">
     <li class="row buffer-row hidden-xs hidden-sm">
-      <span class="dyba-jaguars">D'EVELYN JAGUARS</span>
+      <span class="dyba-jaguars">D'EVELYN YOUTH BASKETBALL</span>
     </li>
     <li class="row hidden-xs">
       <ul class="dyba-nav-menu">
