--- a/client/templates/dyba-header.html
+++ b/client/templates/dyba-header.html
@@ -11,7 +11,7 @@
 </div>
 
 <nav class="dyba-nav-bar row">
-  <ul class="dyba-nav-container hidden-xs col-sm-12">
+  <ul class="dyba-nav-container dyba-nav-container-md hidden-xs hidden-sm col-md-12">
     <li class="dyba-nav-link-container">
       <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">REGISTRATION</a>
     </li>
@@ -55,7 +55,59 @@
     </li>
     <li class="dyba-nav-header-container">
       <a class="dyba-nav-header" role="menuitem" href="#">COACHES</a>
+      <ul class="dyba-dropdown-menu dyba-nav-submenu">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
+    </li>
+  </ul>
+
+  <ul class="dyba-nav-container dyba-nav-container-sm hidden-xs col-sm-12 hidden-md hidden-lg">
+    <li class="dyba-nav-link-container">
+      <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">REGISTRATION</a>
+    </li>
+    <li class="dyba-nav-item roar">
+      <a href="#">
+        <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+      </a>
+    </li>
+    <li class="dyba-nav-header-container">
+      <a class="dyba-nav-header" role="menuitem" href="#">TEAMS</a>
       <ul class="dyba-nav-submenu">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
+    </li>
+    <li class="dyba-nav-item">
+      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+    </li>
+    <li class="dyba-nav-header-container">
+      <a class="dyba-nav-header" role="menuitem" href="#">PROGRAMS</a>
+      <ul class="dyba-nav-submenu">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
+    </li>
+    <li class="dyba-nav-item">
+      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+    </li>
+    <li class="dyba-nav-header-container">
+      <a class="dyba-nav-header" role="menuitem" href="#">ABOUT</a>
+      <ul class="dyba-nav-submenu">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
+    </li>
+    <li class="dyba-nav-item">
+      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+    </li>
+    <li class="dropdown dyba-nav-header-container">
+      <a class="dyba-nav-header" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">COACHES</a>
+      <ul class="dropdown-menu dyba-nav-submenu" aria-labelledby="dropdownMenu2">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
