--- a/public/main.css
+++ b/public/main.css
@@ -137,8 +137,7 @@
   text-align: left;
   font-size: 3vw;
   line-height: 100px;
-  font-weight: bold;
-  font-family: garamond;
+  font-family: 'Bungee Shade', cursive;
 }
 
 .dyba-nav-bar {
@@ -154,6 +153,7 @@
   margin-bottom: 0;
   background-color: white;
   text-align: center;
+  border-radius: 5px 5px 0 0;
 }
 
 .dyba-nav-link-container {
@@ -209,7 +209,7 @@
   position: absolute;
   width: 200px;
   height: auto;
-  padding: 10px;
+  padding: 0;
   background: #fff;
   border: 1px solid #999;
   border-radius: 0 0 5px 5px;
@@ -232,6 +232,21 @@
 .dyba-nav-submenu li a:hover {
   color: #999;
   text-decoration: none;
+}
+
+.dyba-dropdown-menu li a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.42857143;
+  white-space: nowrap;
+}
+
+.dyba-dropdown-menu li a:hover {
+  text-decoration: none;
+  color: #262626;
+  background-color: #f5f5f5;
 }
 
 .dyba-xs-nav-dropdown {
@@ -258,69 +273,58 @@ ul {
   list-style-type: none;
 }
 
-.dyba-links-sidebar {
-  padding-top: 10px;
-}
-
-.dyba-sidelink {
+.dyba-main-sidebar-container {
   position: relative;
   display: block;
-  border-radius: 50%;
-  border: 3px solid #005214;
-  width: 50%;
-  max-width: 120px;
-  background: #888;
+  width: 80%;
+  max-width: 200px;
+  margin: 20px auto;
   overflow: hidden;
-  margin: 10px auto;
 }
 
-.dyba-sidelink:before {
-  content: "";
+.dyba-sidebar-link {
+  position: relative;
   display: block;
-  padding-top: 100%;
+  width: 100%;
+  height: 120px;
+  overflow: hidden;
+  text-align: center;
 }
 
 .dyba-sidebar-logo-1 {
   position: absolute;
   z-index: 2;
-  background: #888;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  background: #dddedd;
   width: 100%;
   color: #005214;
+  line-height: 120px;
   text-align: center;
   font-size: 6vw;
-  font-family: garamond;
-  font-weight: bold;
+  font-family: 'Bungee Shade', cursive;
 }
 
 .dyba-sidebar-logo-2 {
   position: absolute;
   z-index: 1;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  height: 100%;
   left: 0;
-  width: 100%;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: 0 auto;
 }
 
 .dyba-sidebar-logo-3 {
   position: absolute;
   z-index: 0;
-  background: #888;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  background: #dddedd;
   width: 100%;
   color: #005214;
+  line-height: 120px;
   text-align: center;
   font-size: 2vw;
   font-family: garamond;
   font-weight: bold;
-  padding-top: 35%;
 }
 
 @media (max-width: 768px) {
