--- a/client/templates/dyba-header v3.html
+++ b/client/templates/dyba-header v3.html
@@ -1,13 +1,13 @@
 <div class="dyba-title-bar row">
-  <div class="col-xs-1"></div>
+  <div class="hidden-xs col-sm-1"></div>
   <a href="#" class="dyba-logo-container hidden-xs col-sm-2">
     <span class="home-hidden">Home</span>
     <img src="/images/Jags-shield-logo-white-text.png" class="dyba-nav-logo">
   </a>
-  <div class="dyba-title-container col-xs-10 col-sm-8">
-    <span class="dyba-jaguars">D'EVELYN YOUTH BASKETBALL</span>
+  <div class="dyba-title-container col-xs-12 col-sm-8">
+    <span class="dyba-jaguars">DEVELYN YOUTH BASKETBALL</span>
   </div>
-  <div class="col-xs-1"></div>
+  <div class="hidden-xs col-sm-1"></div>
 </div>
 
 <nav class="dyba-nav-bar row">
@@ -114,24 +114,22 @@
       </ul>
     </li>
   </ul>
-
-  <div class="row xs-row hidden-sm hidden-md hidden-lg">
-    <div class="dropdown dyba-xs-nav-dropdown">
-      <button class="btn btn-default dropdown-toggle dyba-xs-nav-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        Menu
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-        <li><a href="#">Action</a></li>
-        <li><a href="#">Another action</a></li>
-        <li><a href="#">Something else here</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">Separated link</a></li>
-      </ul>
-    </div>
-  </div>
 </nav>
 
-
+<div class="row xs-row hidden-sm hidden-md hidden-lg">
+  <div class="dropdown dyba-xs-nav-dropdown">
+    <button class="btn btn-default dropdown-toggle dyba-xs-nav-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+      Menu
+      <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+      <li><a href="#">Action</a></li>
+      <li><a href="#">Another action</a></li>
+      <li><a href="#">Something else here</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+    </ul>
+  </div>
+</div>
 
 
