--- a/public/main.css
+++ b/public/main.css
@@ -57,6 +57,26 @@
   height: 1px;
 }
 
+@font-face {
+  font-family: collegiate_solid;
+  src: url(/css/SF_Collegiate_Solid.ttf);
+}
+
+@font-face {
+  font-family: nexa_hand;
+  src: url(/css/NexaRustHand.ttf);
+}
+
+@font-face {
+  font-family: nexa_0;
+  src: url(/css/nexarustslab-0.otf) format("opentype");
+}
+
+@font-face {
+  font-family: jags;
+  src: url(/css/jagb.ttf);
+}
+
 .dyba-body {
   margin: 0;
   display: block;
@@ -74,13 +94,6 @@
   width: 100%;
   height: auto;
   background-image: linear-gradient(to right, rgba(0, 82, 20, 0.9), #005214 20%, #005214 80%, rgba(0, 82, 20, 0.9));
-}
-
-.dyba-container {
-  position: relative;
-  width: 90%;
-  height: auto;
-  margin: 0 auto;
 }
 
 .dyba-header {
@@ -135,9 +148,9 @@
   display: block;
   color: white;
   text-align: left;
-  font-size: 3vw;
+  font-size: 5vw;
   line-height: 100px;
-  font-family: 'Bungee Shade', cursive;
+  font-family: 'collegiate_solid', cursive;
 }
 
 .dyba-nav-bar {
@@ -153,7 +166,6 @@
   margin-bottom: 0;
   background-color: white;
   text-align: center;
-  border-radius: 5px 5px 0 0;
 }
 
 .dyba-nav-link-container {
@@ -171,7 +183,7 @@
   text-align: center;
   line-height: 30px;
   font-size: 16px;
-  font-family: 'Happy Monkey', cursive;
+  font-family: 'nexa_hand', cursive;
 }
 
 .dyba-nav-item {
@@ -202,7 +214,7 @@
   text-align: center;
   line-height: 30px;
   font-size: 16px;
-  font-family: 'Happy Monkey', cursive;
+  font-family: 'nexa_hand', cursive;
 }
 
 .dyba-nav-submenu {
@@ -266,71 +278,44 @@
   width: 100%;
   height: 900px;
   margin: 0;
+  padding-top: 20px;
   background-color: #dddedd;
+}
+
+.dyba-main-header {
+  position: relative;
+  display: block;
+  width: 600px;
+  height: auto;
+  margin: 0 auto;
+}
+
+.dyba-main-header-row1 {
+  width: 100%;
+  height: 50px;
+}
+
+.dyba-main-header-row1-outside {
+  width: 15%;
+  height: 100%;
+  background: red;
+}
+
+.dyba-main-header-row1-border {
+  width: 25%;
+  background: white;
+}
+
+.dyba-main-header-row1-image {
+  width: 20%;
+  background: blue;
 }
 
 ul {
   list-style-type: none;
 }
 
-.dyba-main-sidebar-container {
-  position: relative;
-  display: block;
-  width: 80%;
-  max-width: 200px;
-  margin: 20px auto;
-  overflow: hidden;
-}
-
-.dyba-sidebar-link {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 120px;
-  overflow: hidden;
-  text-align: center;
-}
-
-.dyba-sidebar-logo-1 {
-  position: absolute;
-  z-index: 2;
-  background: #dddedd;
-  width: 100%;
-  color: #005214;
-  line-height: 120px;
-  text-align: center;
-  font-size: 6vw;
-  font-family: 'Bungee Shade', cursive;
-}
-
-.dyba-sidebar-logo-2 {
-  position: absolute;
-  z-index: 1;
-  height: 100%;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: 0 auto;
-}
-
-.dyba-sidebar-logo-3 {
-  position: absolute;
-  z-index: 0;
-  background: #dddedd;
-  width: 100%;
-  color: #005214;
-  line-height: 120px;
-  text-align: center;
-  font-size: 2vw;
-  font-family: garamond;
-  font-weight: bold;
-}
-
 @media (max-width: 768px) {
-  .dyba-container {
-    width: 100%;
-  }
   .dyba-jaguars {
     text-align: center;
     line-height: 70px;
